Update to bottom navbar to fix visibility on non-mobile devices. changed cetering of icon

--- a/src/app/views/bottom-navbar/bottom-navbar.component.scss
+++ b/src/app/views/bottom-navbar/bottom-navbar.component.scss
@@ -4,7 +4,6 @@
   bottom: 0px;
   left:0;
   right:0;
-  height:150px;
   background: rgb(235,236,240);
   background: linear-gradient(0deg, rgba(235,236,240,1) 0%, rgba(0,212,255,0) 100%);
   padding: 0 40px;
@@ -12,7 +11,7 @@
   #bottom-navbar {
 
     #bottom-strip {
-      margin: 25% 0 0 0;
+      margin: 25% 0 40px 0;
       vertical-align: sub;
       border-radius: 10px;
       height:40px;
@@ -28,7 +27,7 @@
           position: absolute;
           top: 50%;
           font-size: 1.5em;
-          left:35%;
+          left:calc(50% - 11px);
           -ms-transform: translateY(-50%);
           transform: translateY(-50%);
         }
